--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <app-root></app-root>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/e562f4e6cf.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
