--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@1,200&display=swap" rel="stylesheet">
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
